lod2statworkbench (0.0.4) lod2; urgency=low

  * fix proxy settings

 -- Karel Kremer <Karel.Kremer@tenforce.com>  Tue, 24 Sep 2013 14:29:35 +0100

lod2statworkbench (0.0.3) lod2; urgency=low

  * fix dependency issue for r2r

 -- Karel Kremer <Karel.Kremer@tenforce.com>  Wed, 29 Aug 2013 11:13:35 +0100

lod2statworkbench (0.0.2) lod2; urgency=low

  * improve password management strategy in installation

 -- Karel Kremer <Karel.Kremer@tenforce.com>  Wed, 28 Aug 2013 12:11:35 +0100

lod2statworkbench (0.0.1) lod2; urgency=low

  * branching from lod2 demo to create the lod2statworkbench
  * configure the workflow for use in a statistical workcase

 -- Karel Kremer <Karel.Kremer@tenforce.com>  Thu, 7 Mar 2013 16:12:19 +0100

lod2demo (1.2.8) lod2; urgency=low

  * integrate Vuk's changes: lists of CKAN RDF resources
  * disable the SPARQLED configuration

 -- Bert Van Nuffelen (TenForce/LOD2) <Bert.Van.Nuffelen@tenforce.com>  Fri, 14 Dec 2012 12:47:44 +0100

lod2demo (1.2.7) lod2; urgency=low

  * ensure that the virtuoso user is also able to open the conductor
  * reorganize the querying tab

 -- Bert Van Nuffelen (TenForce/LOD2) <Bert.Van.Nuffelen@tenforce.com>  Sat, 01 Dec 2012 05:30:40 +0100

lod2demo (1.2.6) lod2; urgency=low

  * configure sparqled via the lod2demo (requires tomcat restart)
  * include the updates from Vuk.

 -- Bert Van Nuffelen (TenForce/LOD2) <Bert.Van.Nuffelen@tenforce.com>  Fri, 30 Nov 2012 23:30:54 +0100

lod2demo (1.2.5) lod2; urgency=low

  * fix configuration mistake

 -- Bert Van Nuffelen (TenForce/LOD2) <Bert.Van.Nuffelen@tenforce.com>  Fri, 30 Nov 2012 13:51:30 +0100

lod2demo (1.2.4) lod2; urgency=low

  * activate automatically the isparql vad package in virtuoso
  * adapt pwd & user for the conductor
  * configure the colanut app reference
  * base ourselves on the default-jdk & default-jre

 -- Bert Van Nuffelen (TenForce/LOD2) <Bert.Van.Nuffelen@tenforce.com>  Fri, 30 Nov 2012 12:46:27 +0100

lod2demo (1.2.3) lod2; urgency=low